# blazingly-fast-ai-support

./: .dockerignore  .gitignore  Procfile  app.py  drizzle.config.ts  env.ts  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
app/: error.tsx  layout.tsx  loading.tsx  page.tsx
app/terrible/: page.tsx  tuqui.tsx
app/tickets/: error.tsx  layout.tsx  loading.tsx  page copy1.tsx  page.tsx
app/tickets/[ticket_id]/: error.tsx  loading.tsx  page.tsx
components/: chat.tsx  chatbox.tsx  chatinput.tsx  fakemessage.tsx  faketickettab.tsx  lazy-loader.tsx  message.tsx  newticketdialog.tsx  newtickettab.tsx  providers.tsx  ticketsbox.tsx  tickettab.tsx
components/hooks/: useAddTicket.ts  useInfiniteChat.ts  useIsOnScreen.ts  useMessage.ts  useTicket.ts  useTickets.ts  useWindowDimensions.ts
components/queries/: queries.ts
db/: db.ts  migrate.ts  schema.ts  seed.ts
db/migrations/: 0000_tearful_doorman.sql  0000_whole_sabretooth.sql
db/migrations/meta/: 0000_snapshot.json  _journal.json
lib/: types.ts  utils.ts
styles/: globals.css  loading.css
